--- a/虚存&地址空间.md
+++ b/虚存&地址空间.md
@@ -25,6 +25,13 @@
 7.下载paging-multilevel-translate.py文件来模拟多级页表的功能，并完成如下的问题。
 
 - 请指出使用2级和3级页表分别需要几个寄存器来实现完整的地址查找过程？
-- 设置模拟页表文件的随机种子分别为0，1，2以及-c flag，分别指出需要多少内存引用来完成1次查找？
+- 设置模拟页表文件的随机种子分别为0，1，2，同时使用-c flag来检查输出。分别指出需要多少内存引用来完成1次查找？
 - 请你指出，引入虚存机制之后cache的hit/miss情况分别有什么变化。
+
+8.页表还需要更多的机制来实现对于页交换等场景的支持。请下载提供的mem.c文件并编译运行（该程序是一个无限循环程序）。回答下列问题。
+
+- 使用vmstat指令可以实时监控虚存的交换情况等等。请执行./mem 1(这意味着程序占用1MB内存)，并查看1个或多个程序一起运行的时候vmstat显示参数的改变。
+- 执行./mem 1024指令。查看vmstat指令的swpd和free两列随着时间的变化，并记录下杀掉该程序之后值的变化。（着重关注free列的变化）
+- 下面我们主要关注swap相关的信息。首先请获得你linux系统中空闲内存的大小（可以通过查看proc/meminfo实现）。请mem程序分别占用50%，65%，75%空闲内存时做测试，并主要关注swap in/out项。请问该项出现过0值吗？并指出程序进入第二次循环的时候，这两个参数的变化。在之后的循环之中，有多少数据被换入/换出了？
+- 使用swapon -s指令可以查看系统有多少内存空间可供交换。请逐渐增大mem程序的分配空间，并查看，当需求空间到什么大小的时候，mem程序内存的分配失败了。
 
