--- a/虚存&地址空间.md
+++ b/虚存&地址空间.md
@@ -12,11 +12,11 @@
 
 - 使用下列作为参数，探究增大地址空间页表占比之后的会发生什么。
 
-  ![image-20220120162511479](C:\Users\22478\AppData\Roaming\Typora\typora-user-images\image-20220120162511479.png)
+  ![image-20220120162511479](1.png)
 
 - 请更换程序之中的随机种子，并尝试下列非常规的参数。那一组参数对于该程序而言是不现实的？
 
-  ![image-20220120162525583](C:\Users\22478\AppData\Roaming\Typora\typora-user-images\image-20220120162525583.png)
+  ![image-20220120162525583](2.png)
 
 - 请探究什么时候程序就失效了，比如分配的地址空间大于实际空间。并记录这些参数下程序的表现。
 
@@ -32,6 +32,12 @@
 
 - 使用vmstat指令可以实时监控虚存的交换情况等等。请执行./mem 1(这意味着程序占用1MB内存)，并查看1个或多个程序一起运行的时候vmstat显示参数的改变。
 - 执行./mem 1024指令。查看vmstat指令的swpd和free两列随着时间的变化，并记录下杀掉该程序之后值的变化。（着重关注free列的变化）
-- 下面我们主要关注swap相关的信息。首先请获得你linux系统中空闲内存的大小（可以通过查看proc/meminfo实现）。请mem程序分别占用50%，65%，75%空闲内存时做测试，并主要关注swap in/out项。请问该项出现过0值吗？并指出程序进入第二次循环的时候，这两个参数的变化。在之后的循环之中，有多少数据被换入/换出了？
+- 下面我们主要关注swap相关的信息。首先请获得你linux系统中空闲内存的大小（可以通过查看proc/meminfo实现）。请在mem程序分别占用50%，65%，75%空闲内存时做测试，并主要关注swap in/out项。请问该项出现过0值吗？并指出程序进入第二次循环的时候，这两个参数的变化。在之后的循环之中，有多少数据被换入/换出了？
 - 使用swapon -s指令可以查看系统有多少内存空间可供交换。请逐渐增大mem程序的分配空间，并查看，当需求空间到什么大小的时候，mem程序内存的分配失败了。
+
+9.页的交换有着不同的策略。请下载文件paging-policy.py。并完成如下的问题。
+
+- 分别使用 -s 1 -n 10, -s 0 -n 10, -s 2 -n 10产生随机的地址，并分别在FIFO，LRU, OPT这3种策略下看看这些地址访问是否命中。
+- 针对cache_size = 5的情况，在FIFO, LRU, MRU之中分别设计一种会导致最大缺失率的访问序列。请说明要把cache增加到多大，才能让这些策略的命中率接近OPT?
+- 请随机生成一个访存地址序列（可以使用python等。这个问题的分析可以不使用模拟程序），该序列的访问地址局限在某一个小的区间内。请比较LRU和RAND在这个序列上的命中率。并测试当clock bits不同时，CLOCK算法在这个地址上页面交换的效率。
 
