--- a/虚存&地址空间.md
+++ b/虚存&地址空间.md
@@ -25,7 +25,7 @@
 7.下载paging-multilevel-translate.py文件来模拟多级页表的功能，并完成如下的问题。
 
 - 请指出使用2级和3级页表分别需要几个寄存器来实现完整的地址查找过程？
-- 设置模拟页表文件的随机种子分别为0，1，2，同时使用-c flag来检查输出。分别指出需要多少内存引用来完成1次查找？
+- 设置模拟页表文件的随机种子分别为0，1，2(使用-a参数可以修改)，同时使用-c flag来检查输出。分别指出需要多少内存引用来完成1次查找？
 - 请你指出，引入虚存机制之后cache的hit/miss情况分别有什么变化。
 
 8.页表还需要更多的机制来实现对于页交换等场景的支持。请下载提供的mem.c文件并编译运行（该程序是一个无限循环程序）。回答下列问题。
@@ -37,7 +37,7 @@
 
 9.页的交换有着不同的策略。请下载文件paging-policy.py。并完成如下的问题。
 
-- 分别使用 -s 1 -n 10, -s 0 -n 10, -s 2 -n 10产生随机的地址，并分别在FIFO，LRU, OPT这3种策略下看看这些地址访问是否命中。
+- 分别使用 -s 0 -n 10, -s 1 -n 10, -s 2 -n 10产生随机的地址，并分别在FIFO，LRU, OPT这3种策略下看看这些地址访问是否命中。(-s参数影响随机种子,-n影响生成的地址数量)
 - 针对cache_size = 5的情况，在FIFO, LRU, MRU之中分别设计一种会导致最大缺失率的访问序列。请说明要把cache增加到多大，才能让这些策略的命中率接近OPT?
-- 请随机生成一个访存地址序列（可以使用python等。这个问题的分析可以不使用模拟程序），该序列的访问地址局限在某一个小的区间内。请比较LRU和RAND在这个序列上的命中率。并测试当clock bits不同时，CLOCK算法在这个地址上页面交换的效率。
+- 请随机生成一个访存地址序列（可以使用python等。这个问题的分析可以不使用模拟程序），该序列的访问地址局限在某一个小的区间内。请比较LRU和RAND页表交换策略在这个序列上的命中率。并测试当clock bits不同时，CLOCK算法在这个地址上页面交换的效率。
 
